# ARDUINO-UNO-atmel-atmega328p

./: .gitignore  CMakeLists.txt  README.md  build.sh  clean.sh  run.sh
common_dev/docs/: example_of_main_makefile.md
common_dev/scripts/: readme.md
src/: CMakeLists.txt
src/firmware/: CMakeLists.txt  main.cpp
src/firmware/drivers/: Makefile  enable_gpio_pin.c  enable_gpio_pin.h  readme.md
src/libs/: CMakeLists.txt
tests/: readme.md
